Fixed graphic glitches & squashed some bugs in Angular

--- a/angular/src/app/pages/new-tweet/new-tweet.component.scss
+++ b/angular/src/app/pages/new-tweet/new-tweet.component.scss
@@ -28,7 +28,7 @@ mat-form-field{
     object-fit: scale-down;
     margin: 0px 15px;
     border-radius: 8px;
-    max-height: 40vw;
+    max-height: 30vw;
 }
 
 .card-header {
@@ -47,3 +47,17 @@ mat-card-footer {
     margin-left: auto !important;
     z-index: 0;
 }
+
+.spinnerWrapper {
+    z-index: 999;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(4px);
+  }
