--- a/angular/src/app/pages/tweets/tweets.component.scss
+++ b/angular/src/app/pages/tweets/tweets.component.scss
@@ -17,7 +17,7 @@ mat-list-content {
     padding-top: 0px
 }
 
-.box-content {
+body {
     background-color: lightgray;
 }
 
